--- a/index.css
+++ b/index.css
@@ -29,6 +29,12 @@
     box-sizing: border-box;
 }
 
+.tree_disp {
+    height: 100%;
+    width: 100%;
+    background-color: beige;
+}
+
 .mainbody {
     background-color: beige;
     width: 100%;
@@ -251,4 +257,20 @@
 
 .cat_dropdown div:hover {
     background-color: rgb(255, 200, 148);
+}
+
+.svg {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.node {
+    background-color: black;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    position: absolute;
 }
