--- a/index.css
+++ b/index.css
@@ -393,7 +393,7 @@ div .searched {
 }
 
 .speed .speed2 {
-    background-color: rgb(250, 207, 126);
+    background-color: rgb(252, 225, 175);
 }
 .speed .speed2:hover {
     background-color: rgb(253, 176, 33);
@@ -403,11 +403,36 @@ div .searched {
 }
 
 .speed .speed3 {
-    background-color: rgb(255, 162, 162);
+    background-color: rgb(253, 183, 183);
 }
 .speed .speed3:hover {
     background-color: rgb(255, 87, 87);
 }
 .speed .speedselect3 {
     background-color: rgb(255, 87, 87);
+}
+
+.tutorial {
+    position: fixed;
+    width: 50vw;
+    height: 50vh;
+    top: 25vh;
+    left: 25vw;
+    background-color: rgb(255, 255, 245);
+    font-size: 1.5vw;
+}
+.tutorial h1 {
+    padding: 1vh 3vw;
+}
+.tutorial p {
+    padding: 0 3vw;
+}
+
+.tutorial .x_button {
+    width: 2vw;
+    height: 2vw;
+    position: fixed;
+    top: 27vh;
+    right: 26vw;
+    cursor: pointer;
 }
